--- a/PozicniZprava/cze-sablona-pozicni-zprava.tex
+++ b/PozicniZprava/cze-sablona-pozicni-zprava.tex
@@ -103,7 +103,7 @@ Mezi existující nástroje se řadí například:
 \end{itemize}
 Mnohé z těchto aplikací jsou vhodné pro správu velkého množství herních serverů, které běží na různých systémech. Díky webovému rozhraní umožňují snadný
 přístup pro administrátory, případně i zavedení platebního systému pro zákazníky. Jsou tedy vhodné převážně pro komerční subjekty, které se zabývají
-provozem herních serverů pro zákazníky. Většina jejich funkcí je pro tuto práci zbytečná
+provozem herních serverů pro zákazníky. Většina jejich funkcí je pro tuto práci zbytečná.
 
 
 \section{Vaše řešení daného problému}
