--- a/template/FITthesis.cls
+++ b/template/FITthesis.cls
@@ -488,7 +488,8 @@ sp\^ osobom, ktor\'y nezni\v zuje hodnotu Diela (vr\'atane komer\v cn\'eho vyu\v
 		\ClassError{FITthesis}{Czech keywords unspecified}{Specify the keywords in Czech of your thesis using \keywordsCS command.}
 	\fi
 
-	\vfil
+	% \vfil
+	\newpage
 
 	\if@abstractendefined
 		\chapterstyletitle{Abstract}\theabstracten
@@ -532,6 +533,9 @@ sp\^ osobom, ktor\'y nezni\v zuje hodnotu Diela (vr\'atane komer\v cn\'eho vyu\v
 
 	\cleardoublepage
 	\listoftablescond
+
+	\cleardoublepage
+	\listoflistings
 
 	\pagestyle{ruled}
 	\mainmatter
