--- a/BP_Jesina_Matyas_2020.tex
+++ b/BP_Jesina_Matyas_2020.tex
@@ -57,14 +57,14 @@ a popisuje vytvoření obrazu systému, který je pro dané využití vhodný. T
 bez nutnosti jeho časté změny a je snadno rozšiřitelný i pro další hry v budoucnosti.
 
 Výsledkem je obraz systému určeného pro provoz herních serverů, který je bezpečný, obsahuje jen nezbytně nutné součásti a dá se jednoduše nasadit v cloudovém prostředí.
-Celý proces jeho sestavení je plně automatizovaný.}
+Celý proces jeho sestavení a následné instalace serveru je plně automatizovaný.}
 \abstractEN{This thesis addresses the possibilities of automatic deployment and provisioning of game
 servers in cloud environment. It explores existing possibilities of deploying applications in cloud to find the optimal solution
 and describe the creation of a system image appropriate for this use case. This system is capable of running various game servers without frequent
 changes to its internal structure and is easily modifiable to include more games, if desired.
 
-The result si a system image designated to run game servers, which is secure,
-contains only the most necessary components, and can easily be deployed to cloud environment. The entire
+The result is a system image designated to run game servers, which is secure,
+contains only the most necessary components, and can easily be deployed in a cloud environment. The entire
 process is fully automated.}
 \placeForDeclarationOfAuthenticity{V~Praze}
 \declarationOfAuthenticityOption{4} %volba Prohlášení (číslo 1-6)
