--- a/bibliography.bib
+++ b/bibliography.bib
@@ -38,3 +38,46 @@
     year={2019}, 
     urldate={2020-04-20}
 }
+
+@online{gamecp,
+    title={Game Server Hosting Control Panel - GameCP}, 
+    url={https://gamecp.com/}, 
+    year={2020}, 
+    urldate={2020-06-20}
+}
+
+@online{turnkey,
+  title = {TurnKey GNU/Linux | 100+ free ready-to-use system images for virtual machines, the cloud and bare metal},
+  year = 2020,
+  url = {https://www.turnkeylinux.org/},
+  urldate = {2020-05-19}
+}
+
+@online{linuxgsm,
+  title = {LinuxGSM\_},
+  year = 2020,
+  url = {https://linuxgsm.com/},
+  urldate = {2020-05-19}
+}
+
+@online{steamcmd,
+  title = {SteamCMD},
+  year = 2020,
+  url = {https://developer.valvesoftware.com/wiki/SteamCMD},
+  urldate = {2020-05-19}
+}
+
+@online{pterodactyl,
+  title = {Pterodactyl},
+  year = 2020,
+  url = {https://pterodactyl.io/},
+  urldate = {2020-06-21}
+}
+
+@online{gameserverapp,
+  title = {Game Server Manager - GameserverApp.com},
+  year = 2020,
+  url = {https://www.gameserverapp.com/},
+  urldate = {2020-06-26}
+}
+
