--- a/bibliography.bib
+++ b/bibliography.bib
@@ -81,3 +81,10 @@
   urldate = {2020-06-26}
 }
 
+@online{debian_release_stats,
+  title = {DebianReleases - Debian Wiki},
+  year = 2020,
+  url = {https://wiki.debian.org/DebianReleases},
+  urldate = {2020-07-21}
+}
+
