Technology research chapter - OS

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -34,7 +34,7 @@
     booktitle={Statista},
     title={Public cloud application services (SaaS) market size worldwide 2015-2022}, 
     url={https://www.statista.com/statistics/505243/worldwide-software-as-a-service-revenue/}, 
-    author={Holst, Arne}, 
+    author={Gartner}, 
     year={2019}, 
     urldate={2020-04-20}
 }
@@ -86,5 +86,14 @@
   year = 2020,
   url = {https://wiki.debian.org/DebianReleases},
   urldate = {2020-07-21}
+}
+
+@INPROCEEDINGS{server_os_share,
+    booktitle={Statista},
+    title={Global server share by OS 2018-2019}, 
+    url={https://www.statista.com/statistics/915085/global-server-share-by-os/}, 
+    author={ITCandor}, 
+    year={2020}, 
+    urldate={2020-07-20}
 }
 
