Technology research chapter - LinuxGSM

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -97,3 +97,29 @@
     urldate={2020-07-20}
 }
 
+@online{windows_server_reqs,
+  booktitle = {Windows Server 2019 System Requirements},
+  title = {Microsoft Docs},
+  author = {Microsoft},
+  year = 2020,
+  url = {https://docs.microsoft.com/en-us/windows-server/get-started-19/sys-reqs-19},
+  urldate = {2020-07-22}
+}
+
+@online{ubuntu_server_reqs,
+  booktitle = {Installation | Server Documentation},
+  title={Ubuntu},
+  author = {Canonical},
+  year = 2020,
+  url = {https://docs.microsoft.com/en-us/windows-server/get-started-19/sys-reqs-19},
+  urldate = {2020-07-22}
+}
+
+@online{github_linux_gameservers,
+  booktitle = {Automatic installation of gameservers using LinuxGSM},
+  title={GitHub},
+  author = {Ješina, Matyáš},
+  year = 2020,
+  url = {https://github.com/jesinmat/linux-gameservers},
+  urldate = {2020-07-30}
+}
