--- a/bibliography.bib
+++ b/bibliography.bib
@@ -123,3 +123,30 @@
   url = {https://github.com/jesinmat/linux-gameservers},
   urldate = {2020-07-30}
 }
+
+@software{git,
+  author       = {{Software Freedom Conservancy}},
+  title        = {Git},
+  url = {https://git-scm.com/},
+  version = {2.17.1},
+  urldate         = {2020-07-15},
+  howpublished = {software}
+}
+
+@software{vscode,
+  author = {{Microsoft}},
+  title = {Visual Studio Code},
+  url = {https://code.visualstudio.com/},
+  version = {1.47.2},
+  urldate  = {2020-07-20},
+  howpublished = {software}
+}
+
+@software{tkldev,
+  author = {{Turnkey Linux}},
+  title = {TKLDev},
+  url = {https://www.turnkeylinux.org/tkldev},
+  version = {16.0},
+  urldate  = {2020-07-20},
+  howpublished = {software}
+}
