Analysis - functional reqs

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -150,3 +150,12 @@
   urldate  = {2020-07-20},
   howpublished = {software}
 }
+
+@software{inithooks,
+  author = {{Turnkey Linux}},
+  title = {Inithooks},
+  url = {https://github.com/turnkeylinux/inithooks},
+  version = {16.0},
+  urldate  = {2020-07-20},
+  howpublished = {software}
+}
