CD appendix, assignment page

--- a/BP_Jesina_Matyas_2020.tex
+++ b/BP_Jesina_Matyas_2020.tex
@@ -50,7 +50,7 @@
 \authorWithDegrees{Matyáš Ješina} %jméno autora včetně současných akademických titulů
 \author{Matyáš Ješina} %jméno autora bez akademických titulů
 \supervisor{Ing. Tomáš Vondra, Ph.D.}
-\acknowledgements{Doplňte, máte-li komu a za co děkovat. V~opačném případě úplně odstraňte tento příkaz.}
+\acknowledgements{Děkuji svému vedoucímu, Ing. Tomáši Vondrovi, Ph.D., za jeho přínos při tvorbě této bakalářské práce.}
 \abstractCS{Tato práce se zabývá problematikou automatického nasazování herních serverů a jejich provozu v cloudovém prostředí.
 Zkoumá možnosti nasazování aplikací v cloudu za účelem nalezení nejefektivnějšího způsobu
 a popisuje vytvoření obrazu systému, který je pro dané využití vhodný. Tento systém je schopný podporovat množství herních serverů
@@ -70,7 +70,7 @@ process is fully automated.}
 \declarationOfAuthenticityOption{4} %volba Prohlášení (číslo 1-6)
 \keywordsCS{herní server, počítačová hra, cloud, automatizace, nasazování systému}
 \keywordsEN{game server, video game, cloud, automatization, system deployment}
-% \website{http://site.example/thesis} %volitelná URL práce, objeví se v tiráži - úplně odstraňte, nemáte-li URL práce
+\website{https://github.com/jesinmat/bakalarska-prace} %volitelná URL práce, objeví se v tiráži - úplně odstraňte, nemáte-li URL práce
 
 \begin{document}
 
@@ -94,76 +94,5 @@ process is fully automated.}
 % \newacronym{CVUT}{{\v C}VUT}{{\v C}esk{\' e} vysok{\' e} u{\v c}en{\' i} technick{\' e} v Praze}
 % \newacronym{FIT}{FIT}{Fakulta informa{\v c}n{\' i}ch technologi{\' i}}
 
-
-% \subsection{Tabulky}
-
-% V tabulce~\ref{tab:body-dpr} najdete možnosti, jak získat body v předmětu BI-DPR.
-
-% \begin{table}
-% \centering
-% \begin{tabular}{r|c|c}
-%      činnost & body & povinná \\ \hline \hline
-%      test 1 & 10 & ano \\ \hline
-%      test 2 & 10 & ano \\ \hline
-%      poziční zpráva & 60 & ano
-% \end{tabular}
-% \caption{Tabulka bodů z BI-DRP}
-% \label{tab:body-dpr}
-% \end{table}
-
-% \subsection{Obrazky}
-
-% \begin{figure}
-%     \centering
-%     \includegraphics[width=\textwidth]{cvut-logo-bw}
-%     \caption{Logo FIT. Zdroj: \url{www.cvut.cz}}
-%     \label{fig:my_label}
-% \end{figure}
-    
-
-% \bibliographystyle{csn690}
-% \bibliography{mybibliographyfile}
-
-% \subsubsection{Plovoucí prostředí}
-% 
-% Příkazem \verb|\includegraphics| lze obrázky vkládat přímo, doporučujeme však použít plovoucí prostředí, konkrétně \verb|figure|. Například obrázek \ref{fig:float} byl vložen tímto způsobem. Vůbec přitom nevadí, když je obrázek umístěn jinde, než bylo původně zamýšleno -- je tomu tak hlavně kvůli dodržení typografických konvencí. Namísto vynucování konkrétní pozice obrázku doporučujeme používat odkazování z~textu (dvojice příkazů \verb|\label| a \verb|\ref|).
-% 
-% \begin{figure}\centering
-% 	\includegraphics[width=0.5\textwidth, angle=30]{cvut-logo-bw}
-% 	\caption[Příklad obrázku]{Ukázkový obrázek v~plovoucím prostředí}\label{fig:float}
-% \end{figure}
-% 
-% \subsubsection{Verze obrázků}
-% 
-% % Gnuplot BW i barevně
-% Může se hodit mít více verzí stejného obrázku, např. pro barevný či černobílý tisk a nebo pro prezentaci. S~pomocí některých nástrojů na generování grafiky je to snadné.
-% 
-% Máte-li například graf vytvořený v programu Gnuplot, můžete jeho černobílou variantu (viz obr. \ref{fig:gnuplot-bw}) vytvořit parametrem \verb|monochrome dashed| příkazu \verb|set term|. Barevnou variantu (viz obr. \ref{fig:gnuplot-col}) vhodnou na prezentace lze vytvořit parametrem \verb|colour solid|.
-% 
-% \begin{figure}\centering
-% 	\includegraphics{gnuplot-bw}
-% 	\caption{Černobílá varianta obrázku generovaného programem Gnuplot}\label{fig:gnuplot-bw}
-% \end{figure}
-% 
-% \begin{figure}\centering
-% 	\includegraphics{gnuplot-col}
-% 	\caption{Barevná varianta obrázku generovaného programem Gnuplot}\label{fig:gnuplot-col}
-% \end{figure}
-% 
-% 
-% \subsection{Tabulky}
-% 
-% Tabulky lze zadávat různě, např. v~prostředí \verb|tabular|, avšak pro jejich vkládání platí to samé, co pro obrázky -- použijte plovoucí prostředí, v~tomto případě \verb|table|. Například tabulka \ref{tab:matematika} byla vložena tímto způsobem.
-% 
-% \begin{table}\centering
-% 	\caption[Příklad tabulky]{Zadávání matematiky}\label{tab:matematika}
-% 	\begin{tabular}{|l|l|c|c|}\hline
-% 		Typ		& Prostředí		& \LaTeX{}ovská zkratka	& \TeX{}ovská zkratka	\tabularnewline \hline \hline
-% 		Text		& \verb|math|		& \verb|\(...\)|	& \verb|$...$|		\tabularnewline \hline
-% 		Displayed	& \verb|displaymath|	& \verb|\[...\]|	& \verb|$$...$$|	\tabularnewline \hline
-% 	\end{tabular}
-% \end{table}
-% 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 \end{document}
