--- a/template/FITthesis.cls
+++ b/template/FITthesis.cls
@@ -39,6 +39,7 @@
 
 \LoadClass[a4paper,twoside]{memoir}[2016/05/16]
 
+\RequirePackage{pdfpages}
 
 \RequirePackage{babel}[2017/05/19]
 
@@ -509,7 +510,9 @@ sp\^ osobom, ktor\'y nezni\v zuje hodnotu Diela (vr\'atane komer\v cn\'eho vyu\v
 \renewcommand{\counterwithin}{\@ifstar{\@csinstar}{\@csin}}
 
 	\thispagestyle{empty}
-	\if\@lang1{Sem vlo{\v z}te zad{\' a}n{\' i} Va{\v s}{\' i} pr{\' a}ce.}\else\if\@lang2{Sem vlo{\v z}te zadanie Va{\v s}ej pr{\' a}ce.}\else{Insert here your thesis' task.}\fi\fi
+	% \if\@lang1{Sem vlo{\v z}te zad{\' a}n{\' i} Va{\v s}{\' i} pr{\' a}ce.}\else\if\@lang2{Sem vlo{\v z}te zadanie Va{\v s}ej pr{\' a}ce.}\else{Insert here your thesis' task.}\fi\fi
+	\includepdf[pages={1}]{template/zadani.pdf}
+
 
 	\frontmatter
 	\pagestyle{plain}
