Implementation details, remote access analysis

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -124,6 +124,15 @@
   urldate = {2020-07-30}
 }
 
+@online{github_turnkey_gameserver,
+  booktitle = {Game server appliance for TurnKey GNU/Linux},
+  title={GitHub},
+  author = {Ješina, Matyáš},
+  year = 2020,
+  url = {https://github.com/jesinmat/tkl-gameserver},
+  urldate = {2020-07-20}
+}
+
 @software{git,
   author       = {{Software Freedom Conservancy}},
   title        = {Git},
@@ -158,4 +167,13 @@
   version = {16.0},
   urldate  = {2020-07-20},
   howpublished = {software}
+}
+
+@online{lets_encrypt,
+  booktitle = {Free SSL/TLS Certificates},
+  title={Let's Encrypt},
+  author = {{Internet Security Research Group}},
+  year = 2020,
+  url = {https://letsencrypt.org/},
+  urldate = {2020-07-30}
 }
