--- a/bibliography.bib
+++ b/bibliography.bib
@@ -177,3 +177,20 @@
   url = {https://letsencrypt.org/},
   urldate = {2020-07-30}
 }
+
+@software{packer,
+  author = {{HashiCorp}},
+  title = {Packer},
+  url = {https://www.packer.io/},
+  version = {1.6.0},
+  urldate  = {2020-07-20},
+  howpublished = {software}
+}
+
+@online{turnkey_hub,
+  booktitle = {TurnKey Hub},
+  author = {{Turnkey Linux}},
+  year = 2020,
+  url = {https://hub.turnkeylinux.org/},
+  urldate = {2020-07-20}
+}
