--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,4 @@
-@book{newcombe_2012,
+@book{securing_cloud,
     title={Securing Cloud Services: A Pragmatic Approach to Security Architecture in the Cloud},
     publisher={IT Governance Ltd.},
     author={Newcombe, Lee},
@@ -193,4 +193,21 @@
   year = 2020,
   url = {https://hub.turnkeylinux.org/},
   urldate = {2020-07-20}
+}
+
+@software{openstack,
+  author = {{OpenStack Foundation}},
+  title = {OpenStack},
+  url = {https://www.openstack.org/},
+  urldate  = {2020-07-27},
+  howpublished = {software}
+}
+
+@online{centos,
+  booktitle = {About CentOS},
+  title = {CentOS},
+  author = {{The CentOS Project}},
+  year = 2020,
+  url = {https://www.centos.org/about/},
+  urldate = {2020-07-25}
 }
