Fix typos, change some sentence structures

--- a/BP_Jesina_Matyas_2020.tex
+++ b/BP_Jesina_Matyas_2020.tex
@@ -59,7 +59,7 @@ bez nutnosti jeho časté změny a je snadno rozšiřitelný i pro další hry v
 Výsledkem je obraz systému určeného pro provoz herních serverů, který je bezpečný, obsahuje jen nezbytně nutné součásti a dá se jednoduše nasadit v cloudovém prostředí.
 Celý proces jeho sestavení a následné instalace serveru je plně automatizovaný.}
 \abstractEN{This thesis addresses the possibilities of automatic deployment and provisioning of game
-servers in cloud environment. It explores existing possibilities of deploying applications in cloud to find the optimal solution
+servers in cloud environments. It explores existing possibilities of deploying applications in cloud to find the optimal solution
 and describe the creation of a system image appropriate for this use case. This system is capable of running various game servers without frequent
 changes to its internal structure and is easily modifiable to include more games, if desired.
 
