--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13,7 +13,6 @@
     year={2008},
     volume={},
     number={},
-    pages={593-596},
     url={https://ieeexplore.ieee.org/document/4553340},
     urldate={2020-04-20}
 }
@@ -25,7 +24,6 @@
     year={2013},
     volume={},
     number={},
-    pages={143-148},
     url={https://ieeexplore.ieee.org/document/6567335},
     urldate={2020-04-20}
 }
@@ -47,6 +45,7 @@
 }
 
 @online{turnkey,
+  author = {{Turnkey Linux}},
   title = {TurnKey GNU/Linux | 100+ free ready-to-use system images for virtual machines, the cloud and bare metal},
   year = 2020,
   url = {https://www.turnkeylinux.org/},
@@ -63,6 +62,7 @@
 @online{steamcmd,
   title = {SteamCMD},
   year = 2020,
+  author = {Valve},
   url = {https://developer.valvesoftware.com/wiki/SteamCMD},
   urldate = {2020-05-19}
 }
@@ -111,8 +111,16 @@
   title={Ubuntu},
   author = {Canonical},
   year = 2020,
-  url = {https://docs.microsoft.com/en-us/windows-server/get-started-19/sys-reqs-19},
+  url = {https://ubuntu.com/server/docs/installation},
   urldate = {2020-07-22}
+}
+
+@software{ubuntu_server,
+  author = {{Canonical}},
+  title = {Ubuntu Server},
+  url = {https://ubuntu.com/},
+  urldate  = {2020-07-29},
+  howpublished = {software}
 }
 
 @online{github_linux_gameservers,
@@ -209,5 +217,14 @@
   author = {{The CentOS Project}},
   year = 2020,
   url = {https://www.centos.org/about/},
+  urldate = {2020-07-25}
+}
+
+@online{amazon,
+  booktitle = {EC2},
+  title = {{Amazon Web Services}},
+  author = {Amazon},
+  year = 2020,
+  url = {https://aws.amazon.com/ec2/},
   urldate = {2020-07-25}
 }
